# UltimaForge

./: .gitignore  AGENTS.md  BATCH-FILES.md  BRANDING-SETUP.md  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  build.bat  clean.bat  dev-launcher.bat  dev-server.bat  generate-ico.ps1  generate-installer-images.ps1  package-lock.json  package.json  start-dev.bat  sync-branding-config.js  sync-branding.bat  ultimaforge.bat  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-pr.yml  build-release.yml
app/: Cargo.toml  generate-ico.ps1  generate-installer-images.ps1  index.html  package-lock.json  package.json  sync-branding-config.js  tsconfig.json  vite.config.ts
app/branding-template/: README.md  brand.json
app/public/branding/: brand.json
app/scripts/: bump-version.js  configure-launcher-updater.js  deploy.js  dev-all-in-one.js  print-signing-key.js  publish-all.js  publish-launcher-update.ps1  publish-launcher-update.sh  server-owner-wizard.js  setup-vps.js  setup.bat  setup.ps1  setup.sh  validate-env.js
app/src/: App.css  App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json  test_output.txt
app/src-tauri/capabilities/: default.json
app/src-tauri/installer-assets/: nsis-hooks.nsi
app/src-tauri/src/: config.rs  cuo_settings.rs  downloader.rs  error.rs  hash.rs  installer.rs  launcher.rs  lib.rs  main.rs  manifest.rs  migration.rs  security_tests.rs  signature.rs  state.rs  updater.rs
app/src-tauri/src/commands/: crypto.rs  install.rs  launch.rs  migration.rs  mod.rs  settings.rs  update.rs
app/src/components/: CuoControls.css  CuoControls.tsx  ErrorBoundary.css  ErrorBoundary.tsx  InstallWizard.css  InstallWizard.tsx  LaunchButton.css  LaunchButton.tsx  LaunchOptions.css  LaunchOptions.tsx  LauncherUpdateModal.css  LauncherUpdateModal.tsx  Layout.css  Layout.tsx  MigrationWizard.css  MigrationWizard.tsx  PatchNotes.css  PatchNotes.tsx  Settings.css  Settings.tsx  SetupWizard.css  SetupWizard.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  UpdateProgress.css  UpdateProgress.tsx
app/src/hooks/: useBrand.ts  useInstall.ts  useLaunch.ts  useMigration.ts  useSettings.ts  useUpdate.ts
app/src/lib/: api.ts  launcherUpdater.ts  types.ts
app/src/styles/: theme.css
app/test-data/: README.md
app/test-data/sample-client/: build-info.txt  map0.mul
app/tools/host-server/: Cargo.toml
app/tools/host-server/src/: brand.rs  health.rs  main.rs  routes.rs  validation.rs
app/tools/publish-cli/: Cargo.toml
app/tools/publish-cli/src/: blob.rs  keygen.rs  main.rs  manifest.rs  sign.rs  validate.rs
branding/: README.md  brand.example.json  brand.json
branding-template/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: EASE_OF_USE_PLAN.md  MANUAL_TEST_SERVER_OWNER.md  PUBLISHING.md  QUICKSTART.md  README.md  SELF-UPDATE.md  SETUP.md  StatusReport.md
docs/plans/: 2026-02-19-cuo-client-settings-design.md  2026-02-19-cuo-client-settings-impl.md  2026-02-19-key-flow-fixes.md  2026-02-20-server-data-vps-deploy.md
docs/superpowers/plans/: 2026-04-01-migration-path.md
docs/superpowers/specs/: 2026-04-01-migration-path-design.md
scripts/: setup.ps1  validate-env.js
server-data/: README.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  downloader.rs  error.rs  installer.rs  lib.rs  main.rs  security_tests.rs  state.rs  updater.rs
src-tauri/src/commands/: crypto.rs  install.rs  launch.rs  mod.rs  settings.rs  update.rs
src/components/: ErrorBoundary.css  ErrorBoundary.tsx  InstallWizard.css  InstallWizard.tsx  LaunchButton.css  LaunchButton.tsx  Layout.css  Layout.tsx  PatchNotes.tsx  Settings.css  Settings.tsx  SetupWizard.css  SetupWizard.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css
src/hooks/: useBrand.ts  useInstall.ts  useSettings.ts
src/lib/: api.ts  types.ts
test-data/: README.md
test-data/sample-client/: art.mul
test-updates/: manifest.json  manifest.sig
tests/e2e/: README.md  checklist.md  first-run-install.md  launch-flow.md  restore-v1.0.0.ps1  restore-v1.0.0.sh  run-e2e-tests.ps1  run-e2e-tests.sh  security-tests.md  setup-v1.1.0.ps1  setup-v1.1.0.sh  update-flow.md
tools/host-server/: Cargo.toml
tools/host-server/src/: health.rs  main.rs  routes.rs  validation.rs
tools/publish-cli/: Cargo.toml
tools/publish-cli/src/: main.rs  manifest.rs  sign.rs
