[workspace]
resolver = "2"
members = [
    "app/src-tauri",
    "app/tools/host-server",
    "app/tools/publish-cli",
]

[workspace.package]
version = "0.0.7"
authors = ["UltimaForge"]
edition = "2021"
rust-version = "1.77.2"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Error handling
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Directory traversal
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
