[package]
name = "ultimaforge"
version = "0.0.1"
description = "Self-Hosted UO Installer/Patcher/Launcher"
authors = ["UltimaForge"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ultimaforge_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"

# HTTP and async
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
