[package]
name = "ultimaforge"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Self-Hosted UO Installer/Patcher/Launcher"

[lib]
name = "ultimaforge_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Cryptography
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

# HTTP and async
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio.workspace = true
futures-util = "0.3"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Disk space (cross-platform)
fs4 = "0.13"

# Windows API (for elevation detection)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.10"
