[package]
name = "host-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Simple static file server for hosting UltimaForge update artifacts"

[[bin]]
name = "host-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
